<resources>
    <string name="app_name">BNHCS</string>
    <string name="edu">Education is the passport to the future, for tomorrow belongs to those who prepare for it today.</string>
    <string name="quotes">\"</string>
    <string name="new_user_create_an_account">New User? Create an Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="username">Email Address</string>
    <string name="b_n_heaven_logo">B.N. Heaven logo</string>
    <string name="create_a_student_account">Create a Student Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="grade">Class</string>
    <string name="email_address">Email Address</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_a_teacher_account">Create a Teacher Account</string>
    <string name="p1">1. Fee days on the 5th day of every month</string>
    <string name="p2">2. Those who do not pay the fees within the time, overdue charges of Rs 50/- will be applicable from the next month.</string>
    <string name="p3">3. Go for online payment ONLY in unavoidable circumstances.</string>
    <string name="p4">4. In case of a booklet is lost duplicate booklet will be issued on payment of Rs 50/- with the permission of principal only after obtaining an application from the parent.</string>
    <string name="p5">5. Payment can be made in advance for the whole year.</string>
    <string name="p6">6. Online payments will be accepted in PayTM, Phonepe or Google Pay no. on mobile number - 9198326401. After the payment send the invoice or transaction ID with the full name of student and it\'s class on the WhatsApp number provided on contact.
</string>
    <string name="p7">For any assistance, kindly contact us on :</string>
    <string name="p9">7. Transporatation Charges will be calculated on the basis of distance travelled. For further queries contact at the number given below.</string>
    <string name="phn"><u>+917458891111</u></string>
    <string name="bholanath_intro">B.N. Heaven Convent School is a higher primary school (Nursery - VIII) situated in Bholanath Nagar, Narhan, Kerakat, District-Jaunpur established in 15 May  2003.</string>
    <string name="bholanath">B.N. Heaven Convent School is established in the loving memory of late Shri Bholanath Kamlapuri (1886-1942). He was Honarary magistrate and assistant collector of Kerakat, Jaunpur.</string>
    <string name="our_school_1">For almost 2 decades, B.N. Heaven Convent School has developed with a spirit and a vision. Today it stands as a citadel of learning and a harbinger of quality consciousness, committed to developing the minds and initiatives of children.</string>
    <string name="our_school_2">B.N.Heaven Convent School strongly committed to the cause of justice, therefore it offer educational opportunities also to the weaker section of society.</string>
    <string name="our_school_3">BNHCS see each student as a unique and precious gift to his/her family and society, a person created by God to know and love Him and to work for Him by making this world a better place to live in.</string>
    <string name="our_school_4">Parents are the first and most important educators to their children. School education can only be built on the foundation laid by the family.</string>
    <string name="our_school_5">SPECIAL EFFORT ARE MADE AT BNHCS</string>
    <string name="osp1">To help students to become mature, reliable people of character.</string>
    <string name="osp2">To be clear and firm on principles and courageous in action.</string>
    <string name="osp3">To value and use their freedom judiciously.</string>
    <string name="osp4">Strive after excellence in every field.</string>
    <string name="osp5">To be unselfish in the service of their fellow human beings and appreciate all religions.</string>
    <string name="oftxt1">Vishwambhar Nath Kamlapuri was the only son of Late Bhola Nath Kamlapuri who was an Honorary Magistrate and Assistant collector of District- Jaunpur.  Vishwambhar Nath Kamlapuri was born on 5 August 1936.</string>
    <string name="oftxt2">When he was a child, he used to observe his father who was fond of children and used to meet kids with immense affection. His father Late Bhola Nath Kamlapuri always wanted to do something for the children, so as a son he fulfilled his dream and opened a School and gave it the name after his father Bhola Nath Heaven Convent School which is known as B.N. Heaven Convent School.</string>
    <string name="oftxt3">On 5 September 2004 Vishwambhar Nath Kamlapuri breathed forth his soul to god at 11:20 am.</string>
    <string name="oftxt4">Late Babu Vishwambhar Nath Kamlapuri has 3 sons who now take care of the school and also handle its work.</string>
    <string name="oftxt6">There is in every child, at every stage, a new miracle of vigorous unfolding- which constitutes a new hope and a new responsibility for all.</string>
    <string name="oftxt7">At B. N. Heaven Convent School, we are committed in imparting a holistic education, enabling young minds to realize their true potential and to take their rightful place in society. For me the primary aim of every school should be to mould their children as good human beings. Compassion, empathy, selfless service, honesty, politeness, tolerance, diligence, commitment and perseverance are some of the hallmarks of a good human being. The atmosphere at school is an amalgamation of modern trends and invaluable tradition in a truly child-friendly environment. We believe in providing equal opportunity for all in terms of participation in extra-curricular activities. Thus, we endeavour to instil the feeling of “being wanted” and a “sense of belonging” in every child. Besides the enriching curriculum in the class-room sessions, all the aspects- ranging from inter-house competitions to healthy out-door sessions, are conducted from time to time to cater to the overall growth of the child. The world class facilities in this beautiful campus with an efficient administrative back-up and a team of competent, passionate teachers substantiate our commitment to quality.</string>
    <string name="oftxt8">“At B. N. Heaven Convent School, each child is a valued individual. Our child centered philosophy helps students achieve their maximum potential and model, lifelong learning and positive values”</string>
    <string name="oftxt9">Our eager children have a real thirst for learning and our excellent staff team are committed and dedicated in ensuring that each and every child achieves. We have high standards and expect the best.</string>
    <string name="oftxt10">At B. N. Heaven Convent School, we are committed to prepare students for the challenges of the 21st century. While we accord priority to academic excellence, we also lay strong emphasis on their wholesome development by achieving a balance among academic, physical and artistic pursuits.</string>
    <string name="oftxt11">Our aim is to provide an enriching curriculum in a conducive learning environment. The world class facilities at our campus with an efficient administrative back-up and a team of competent, passionate teachers substantiate our commitment to quality.</string>
    <string name="oftxt12">It gives me immense pleasure to welcome you to B. N. Heaven Convent School. The school works on the ideologies of ipsative learning i.e. to compete with self. We aim to provide every child with intrinsic motivation the child himself wants to study more. The school believes where that the child himself is his biggest competition and has given birth to four acts- Assessments for Learning, Child-centric books, Training that sticks and Service, which leads to measurable improvement in the child. As a resource manager of the institution I ensure best standard of education and personal development of students and the institutions grows up to be the best school in Jaunpur.</string>
    <string name="oftxt13">At B. N. Heaven Convent School, each student is believed to be a unique individual and together we aim to maximize every child’s potential, inspire human greatness, nurture leadership of thought and action and create consciousness of the needs of others.</string>
    <string name="oftxt14">"Some where, something incredibly is waiting to be known.".         -Carl Sagon</string>
    <string name="oftxt15">Children, Parents and Teachers, there is never any point in life when we can sit back and say, "There is nothing more to learn, I can relax". Education is not just about the subject that are learnt and taught in school. Becoming educated is not restricted to being in school and then college and gathering certification feeling proud of oneself. It is the lifelong exercise, so how do we manage it, through the journey of life.</string>
    <string name="oftxt16">Childhood is the best time to lay the foundation of core value essential for the development of future citizen of tomorrow.</string>
    <string name="oftxt17">In B.N. Heaven Convent School equal attention is given to the development of children both academically and in extra curricular activity like sports, yoga, cultural activities, etc. Bheem faces on smart work than hard work to achieve the goal of success.</string>
    <string name="oftxt18">My message to the principal staff, students and esteemed parent of B.N. Heaven Convent School is to dedicate this year to a correct understanding of what education really means and let us all benefit from this understanding.</string>
    <string name="ourmission">B.N. Heaven Convent School aims to nurture children who are compassionate, respectful, caring and loving. It also aims to instill in them a scientific temper and global perspective, harness entrepreneurship and life skills, nourish ethical leadership and humanitarian endeavors by introducing them to the knowledge from the world over. With this mission and vision we aim to nurture children who grow up to be responsible and happy children, for only happy children make for a happy family, a happy society, a happy country that will make for a happy and peaceful world. The schools aim to impart the vedic wisdom of \'Abhivandan Shilayasa\' rooted deep in our values and culture. It is also our mission and vision that all our students, teachers, principals, parents and management synergise together in thought and action in the common quest for self discovery and self learning.</string>
    <string name="our_young_pre_classroom_is_for_ages_this_age_group_is_working_on_developing_their_fine_and_gross_motor_skills_that_are_gaining_independence">Our Young Pre classroom is for ages. This age group is working on developing their fine and gross motor skills, that are gaining independence.</string>
    <string name="we_envision_a_learning_environment_that_fosters_paramount_values_and_multivalent_competencies_in_growing_individuals_with_the_help_of_a_dynamic_curriculum">We envision a learning environment that fosters paramount values and multivalent competencies in growing individuals with the help of a dynamic curriculum.</string>
    <string name="to_encourage_citizenship_and_responsibility_and_teach_generosity_of_spirit_so_that_students_become_self_disciplined_and_learn_to_respect_themselves_each_other_and_the_world_in_general">To encourage citizenship and responsibility and teach generosity of spirit, so that students become self-disciplined and learn to respect themselves, each other, and the world in general.</string>
</resources>