<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:padding="10dp"
        android:src="@drawable/bnhicon"
        android:gravity="center"
        android:id="@+id/bnhicon"
        android:contentDescription="@string/b_n_heaven_logo"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:hint="@string/username"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:background="#A9A9A9"
        android:inputType="text"
        android:drawableEnd="@drawable/usericon"
        android:id="@+id/username"
        android:autofillHints="Email Address" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:background="#A9A9A9"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/passicon"
        android:id="@+id/password"
        android:autofillHints="Password" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/rounded_button_1"
        android:padding="10dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:id="@+id/logbtn"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/logbtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="200dp"
        android:drawableStart="@drawable/fpicon"
        android:drawablePadding="10dp"
        android:text="@string/forgot_password"
        android:background="@drawable/ripple_effect"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:gravity="center"
        android:textStyle="bold"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/btcolor"
        android:id="@+id/fpid"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@color/btcolor"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/new_user_create_an_account"
        android:textAllCaps="false"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:id="@+id/createbtn"
        />
</androidx.constraintlayout.widget.ConstraintLayout>