<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#ffe6d0"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#ffe6d0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="730dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/withoutbar"
            android:id="@+id/withoutbar"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Our School"
            android:fontFamily="@font/aliceregular"
            android:layout_marginTop="20dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="#000000"
            android:alpha="0"
            android:id="@+id/ostext"
            />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/our_school_logo"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="10dp"
            android:alpha="0"
            android:layout_marginTop="60dp"
            android:id="@+id/ourschoollogo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/bholanath"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/bholanath_intro"
            android:fontFamily="@font/aliceregular"
            android:textColor="#000000"
            android:textSize="15sp"
            android:id="@+id/text1"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/babu_bholanath"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="400dp"
            android:id="@+id/bholanath"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bholanath"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/bholanath"
            android:textColor="#000000"
            android:fontFamily="@font/aliceregular"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/text2"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/our_school_1"
            android:textColor="#000000"
            android:fontFamily="@font/aliceregular"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/text3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text3"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/our_school_2"
            android:textColor="#000000"
            android:fontFamily="@font/aliceregular"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/text4"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text4"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/our_school_3"
            android:textColor="#000000"
            android:fontFamily="@font/aliceregular"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/text5"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text5"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/our_school_4"
            android:textColor="#000000"
            android:fontFamily="@font/aliceregular"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/text6"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text6"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/our_school_5"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="#000000"
            android:fontFamily="@font/aliceregular"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/text7"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text7"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/osp1"
            android:textColor="#000000"
            android:fontFamily="@font/aliceregular"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/text8"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text8"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/osp2"
            android:textColor="#000000"
            android:fontFamily="@font/aliceregular"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/text9"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text9"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/osp3"
            android:textColor="#000000"
            android:fontFamily="@font/aliceregular"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/text10"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text10"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/osp4"
            android:textColor="#000000"
            android:fontFamily="@font/aliceregular"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/text11"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text11"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/osp5"
            android:textColor="#000000"
            android:fontFamily="@font/aliceregular"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/text12"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/text12"
            android:background="#ffe6d0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>