<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="30sp"
        android:padding="10sp"
        android:background="#ffffff"
        android:gravity="start"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/btcolor"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:text="@string/create_a_student_account"
        android:id="@+id/cr"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="#A9A9A9"
        android:hint="@string/first_name"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        android:textAlignment="textStart"
        android:gravity="start"
        android:textAllCaps="false"
        android:inputType="text"
        android:padding="5dp"
        android:autofillHints="first-name"
        android:id="@+id/fname"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="#A9A9A9"
        android:hint="@string/last_name"
        android:autofillHints="last-name"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textColorHint="#ffffff"
        android:textAlignment="textStart"
        android:gravity="start"
        android:textAllCaps="false"
        android:inputType="text"
        android:padding="5dp"
        android:id="@+id/lname"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="#A9A9A9"
        android:hint="@string/grade"
        android:autofillHints="@string/common_google_play_services_enable_text"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textColorHint="#ffffff"
        android:textAlignment="textStart"
        android:gravity="start"
        android:textAllCaps="false"
        android:inputType="text"
        android:padding="5dp"
        android:id="@+id/grade"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/grade"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="#A9A9A9"
        android:hint="@string/email_address"
        android:autofillHints="Email Address"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textAlignment="textStart"
        android:gravity="start"
        android:textAllCaps="false"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:id="@+id/email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="#A9A9A9"
        android:hint="@string/password"
        android:autofillHints="password"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textAlignment="textStart"
        android:gravity="start"
        android:textAllCaps="false"
        android:inputType="textPassword"
        android:padding="5dp"
        android:id="@+id/pswrd"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pswrd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded_button_1"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:id="@+id/crtbtn"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crtbtn"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        tools:layout_editor_absoluteY="525dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>